TINY-4395: Fixed toolbar buttons that only contain text overlapping on mobile devices

--- a/modules/oxide/src/less/theme/components/toolbar/toolbar-group.less
+++ b/modules/oxide/src/less/theme/components/toolbar/toolbar-group.less
@@ -29,6 +29,7 @@
 
   // Prevent wrapping to multiple rows if using a sliding toolbar
   .tox-toolbar--scrolling .tox-toolbar__group {
+    flex-shrink: 0;
     flex-wrap: nowrap;
   }
 }
